--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,11 @@ html{
 h1,h3{
     color: #606d5f;
 }
+h3{
+    font-weight: 700;
+    font-size: 2.2rem;
+    text-transform: capitalize;
+}
 p,li,a,button{
     color: #888;
 }
@@ -44,12 +49,10 @@ button{
 
 /* --------------header section ----------------- */
 header{
-    border: 1px solid black;
     padding: 0 20rem;
     width: 100%;
 }
 header nav{
-    border: 2px solid saddlebrown;
     display: flex;
     height: 12rem;
     justify-content: space-between;
@@ -76,4 +79,102 @@ header nav .menu-class a li{
 
 header nav .menu-class a li:hover{
     color: #4b709e;
+}
+
+/* hero section styles here */
+.hero-section{
+    padding: 0 20rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5rem;
+}
+
+/* hero left side */
+.hero-section .hero-content{
+    width: 50%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.hero-section .hero-content h1{
+    width: 40rem;
+    font-size: 5rem;
+    line-height: 5rem;
+    margin-bottom: 4rem;
+    text-transform: capitalize;
+}
+
+.hero-section .hero-content p{
+    width: 45rem;
+    margin-bottom: 3rem;
+}
+
+.hero-section .hero-img{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-section .hero-img img{
+    width: 100%;
+}
+
+
+/* products section styles here */
+.products-section{
+    padding: 0 20rem;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20rem;
+}
+
+.products-section h1{
+    font-size: 5rem;
+    line-height: 5rem;
+    margin-bottom: 5rem;
+    text-align: center;
+    text-transform: capitalize;
+}
+
+.products-section .products{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 2rem;
+    justify-items: center;
+
+}
+
+.products-section .products .product-card{
+    width: 25rem;
+    height: 25rem;
+    background-color: #efefefef;
+    border-radius: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem;
+    margin-bottom: 2rem;
+}
+
+.products-section .products .product-card img{
+    width: 80%;
+    border-radius: 50%;
+}
+
+.products-section .products .product-card .buy-btn{
+    padding: 1rem 2rem;
+    background: #fff;
+    border: 2px solid #efefefef;
+    border-radius: 1rem;
+    line-height: 1rem;
+    font-size: 1.5rem;
+    margin-top: 1rem;
 }
