--- a/styles/style.css
+++ b/styles/style.css
@@ -178,3 +178,14 @@ header nav .menu-class a li:hover{
     font-size: 1.5rem;
     margin-top: 1rem;
 }
+
+/* footer styles here */
+footer{
+    margin-top: 5rem;
+    font-size: 1rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #efefefef;
+}
