--- a/styles/style.css
+++ b/styles/style.css
@@ -1,39 +1,51 @@
 /* common styles */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-html{
+
+html {
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
-h1,h3{
+
+h1,
+h3 {
     color: #606d5f;
 }
-h3{
+
+h3 {
     font-weight: 700;
     font-size: 2.2rem;
     text-transform: capitalize;
 }
-p,li,a,button{
+
+p,
+li,
+a,
+button {
     color: #888;
 }
-p{
+
+p {
     font-size: 1.8rem;
     line-height: 150%;
     font-size: normal;
     font-weight: normal;
 }
-a{
+
+a {
     text-decoration: none;
     cursor: pointer;
 }
-li{
+
+li {
     list-style: none;
 }
-button{
+
+button {
     padding: 1rem 3rem;
     border-radius: 2rem;
     border: none;
@@ -48,41 +60,43 @@ button{
 
 
 /* --------------header section ----------------- */
-header{
+header {
     padding: 0 20rem;
     width: 100%;
 }
-header nav{
+
+header nav {
     display: flex;
     height: 12rem;
     justify-content: space-between;
     align-items: center;
 }
-header nav .logo-class h1{
+
+header nav .logo-class h1 {
     font-size: 3rem;
 }
 
-header nav .menu-class{
+header nav .menu-class {
     display: flex;
 }
 
-header nav .menu-class a{
+header nav .menu-class a {
     margin-left: 4rem;
 }
 
-header nav .menu-class a li{
+header nav .menu-class a li {
     font-size: 2rem;
     line-height: 3.6rem;
     text-transform: capitalize;
     transition: all 0.2s;
 }
 
-header nav .menu-class a li:hover{
+header nav .menu-class a li:hover {
     color: #4b709e;
 }
 
 /* hero section styles here */
-.hero-section{
+.hero-section {
     padding: 0 20rem;
     width: 100%;
     height: 100%;
@@ -93,7 +107,7 @@ header nav .menu-class a li:hover{
 }
 
 /* hero left side */
-.hero-section .hero-content{
+.hero-section .hero-content {
     width: 50%;
     height: 80vh;
     display: flex;
@@ -102,7 +116,7 @@ header nav .menu-class a li:hover{
     align-items: flex-start;
 }
 
-.hero-section .hero-content h1{
+.hero-section .hero-content h1 {
     width: 40rem;
     font-size: 5rem;
     line-height: 5rem;
@@ -110,32 +124,32 @@ header nav .menu-class a li:hover{
     text-transform: capitalize;
 }
 
-.hero-section .hero-content p{
+.hero-section .hero-content p {
     width: 45rem;
     margin-bottom: 3rem;
 }
 
-.hero-section .hero-img{
+.hero-section .hero-img {
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.hero-section .hero-img img{
+.hero-section .hero-img img {
     width: 100%;
 }
 
 
 /* products section styles here */
-.products-section{
+.products-section {
     padding: 0 20rem;
     width: 100%;
     height: 100%;
     margin-bottom: 20rem;
 }
 
-.products-section h1{
+.products-section h1 {
     font-size: 5rem;
     line-height: 5rem;
     margin-bottom: 5rem;
@@ -143,15 +157,15 @@ header nav .menu-class a li:hover{
     text-transform: capitalize;
 }
 
-.products-section .products{
+.products-section .products {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
     justify-items: center;
 
 }
 
-.products-section .products .product-card{
+.products-section .products .product-card {
     width: 25rem;
     height: 25rem;
     background-color: #efefefef;
@@ -164,12 +178,12 @@ header nav .menu-class a li:hover{
     margin-bottom: 2rem;
 }
 
-.products-section .products .product-card img{
+.products-section .products .product-card img {
     width: 80%;
     border-radius: 50%;
 }
 
-.products-section .products .product-card .buy-btn{
+.products-section .products .product-card .buy-btn {
     padding: 1rem 2rem;
     background: #fff;
     border: 2px solid #efefefef;
@@ -180,7 +194,7 @@ header nav .menu-class a li:hover{
 }
 
 /* footer styles here */
-footer{
+footer {
     margin-top: 5rem;
     font-size: 1rem;
     height: 5rem;
@@ -188,4 +202,94 @@ footer{
     justify-content: center;
     align-items: center;
     background: #efefefef;
+}
+
+
+/* responsive for mobile devices */
+@media screen and (max-width:576px) {
+
+    header,
+    .hero-section,
+    .products-section {
+        padding: 0 5rem;
+    }
+
+    .hero-section,
+    .products-section {
+        margin-bottom: 12rem;
+    }
+
+    header nav .logo-class h1 {
+        font-size: 2rem;
+    }
+
+    header nav .menu-class a {
+        margin-left: 1.3rem;
+    }
+
+    header nav .menu-class li {
+        font-size: 1.5rem;
+    }
+
+    .hero-section {
+        flex-direction: column;
+    }
+
+    .hero-section .hero-content {
+        order: 2;
+        width: 100%;
+    }
+
+    .hero-section .hero-content h1 {
+        font-size: 2rem;
+        width: 100%;
+        line-height: 6rem;
+        margin-bottom: 2rem;
+    }
+
+    .hero-section .hero-content p{
+        width: 100%;
+        font-size: 2rem;
+        margin-bottom: 5rem;
+    }
+
+    .hero-section .hero-img{
+        order: 1;
+        width: 100%;
+    }
+    
+    .products-section h1{
+        font-size: 3rem;
+        margin-bottom: 2rem;
+        line-height: 6rem;
+    }
+
+    .products-section .products{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    footer p{
+        font-size: 1.5rem;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
